tests/ui/atomics/scope_overreach_gpu_system.rx
//@ spec: RXS-0080
kernel fn k(a: Atomic<u32, Scope::Gpu>) {
    a.fetch_add(1, Scope::System); //~ ERROR RX3010
}

fn main() {}
